<resources>
    <string name="app_name">Queue Up</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for fragments for login/registration -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="registration_fragment_label">Registration Fragment</string>
    <string name="logged_in_user_string">Now you are a logged in user of this app!</string>
    <string name="account_login_string">Account login</string>
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>
    <string name="creditcard_hint_string">Credit Card</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="register_new_account_string">Register new account</string>
    <string name="register_success_string">Registration successful!</string>
    <string name="register_failed_string">Registration failed! Please try again later</string>
    <string name="invalid_password">Password must contain 6 characters with one letter and one number!</string>
    <string name="invalid_creditcard">Credit card needs to be composed with numeric values and have the length of 16</string>
    <string name="invalid_email">Please enter valid email…</string>
    <string name="login_toast">Please enter email...</string>
    <string name="password_toast">Please enter password!</string>
    <string name="logout">Logout</string>
    <string name="dashboard_fragment_label" />
    <string name="menu_dashboard" />
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">ticket test</string>
    <string name="nav_header_concert">Purchase tickets</string>

    <string name="home_label" />
    <string name="logout_label" />

    =======
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Strings used for adding tickets to cart -->
    <string name="add_to_cart">Checkout!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    >>>>>>> Stashed changes
</resources>