<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.queueup.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_RegistrationFragment"
            app:destination="@id/RegistrationFragment" />
        <action
            android:id="@+id/action_LoginFragment_to_Dashboard"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/RegistrationFragment"
        android:name="com.example.queueup.RegistrationFragment"
        android:label="@string/registration_fragment_label"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_RegistrationFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/DashboardFragment"
        android:name="com.example.queueup.Dashboard"
        android:label="@string/dashboard_fragment_label"
        tools:layout="@layout/fragment_dashboard">
        //all to login for now
        <action
            android:id="@+id/action_DashboardFragment_to_concert1"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_DashboardFragment_to_concert2"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_DashboardFragment_to_concert3"
            app:destination="@id/LoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.queueup.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.queueup.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.queueup.Dashboard"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_dashboard">
    </fragment>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.queueup.LoginFragment"
        android:label="@string/logout_label"
        tools:layout="@layout/fragment_login">
    </fragment>

</navigation>