<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="Ticketmaster"
        android:textColor="@color/pink"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="40dp"></TextView>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint_string"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint_string"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/login"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:text="@string/login_string"
            android:backgroundTint="@color/pink"
            android:shadowColor="@color/darkpink"
            android:shadowRadius="4"/>

        <Button
            android:id="@+id/register"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:text="@string/register_string"
            android:backgroundTint="@color/pink"/>
    </TableRow>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />


</LinearLayout>
